[package]
name = "advent2022"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
cached = "0.40.0"
clap = { version = "4.0.29", features = ["derive"] }
itertools = "0.10.5"
memoize = "0.3.3"
nom = "7.1.1"
num = "0.4.0"
petgraph = "0.6.2"
rayon = "1.6.1"
regex = "1"
